# buddy-app

./: .env.example  .env.prod.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .spectral.yaml  .trivyignore  CLAUDE.md  CODE_QUALITY_STANDARDS.md  GLOBAL_ROUTING_AURORA.md  GLOBAL_ROUTING_COMPARISON.md  GLOBAL_ROUTING_MONGO.md  GLOBAL_ROUTING_MONGO_ATLAS.md  GLOBAL_ROUTING_SETUP.md  IMPLEMENTATION_PLAN.md  README.md  README_LIVE.md  README_LIVE_PROPOSED.md  README_LIVE_PROPOSED_V1.md  README_LIVE_PROPOSED_V1_PROMPT.md  README_LIVE_PROPOSED_V2.md  README_LIVE_PROPOSED_V2_PROMPT.md  check.sh  docker-compose-cloud.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements-security.txt  requirements-test.txt  requirements.txt  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_last_visited_path.py
backend/app/: api_routes.py  auth_utils.py  database.py  deps.py  limiter.py  llm_rate_limiter.py  main.py  models.py  models_api.py  reconciler.py  routing.py  settings.py
backend/app/routers/: audio.py  auth.py  children.py  downloads.py  jobs.py  llm.py  users.py
backend/app/services/: llm_service.py
backend/tools/: export-openapi.py
docs/: api.md  aws-cost-estimate.md  aws-resources.md  ci-cd.md  code-quality.md  frontend.md  getting-started.md  infra-architecture-v1.md  jwt-keys.md  static-assets.md  tests.md
frontend-app/: .env.example  .eslintrc.js  .gitignore  App.tsx  README.md  app.json  babel.config.js  global.css  jest.config.js  (+6 more)
(+491 files in other folders)
